--- a/polymer/components/widget-frame/widget-frame.html
+++ b/polymer/components/widget-frame/widget-frame.html
@@ -8,6 +8,10 @@
 				background-color: navy;
 			}
 
+			footer {
+				background-color: #fff;
+			}
+
 			.logo {
 				height:30px;
 				margin:10px 20px;
@@ -20,11 +24,11 @@
 		</header>
 
 		<section layout horizontal center-justified flex>
-			<content></content>
+			<content select=".main, .scroll, .content"></content>
 		</section>
 
 		<footer>
-
+			<content select=".footer"></content>
 		</footer>
 	</template>
 
