--- a/polymer/components/nodelist-base/nodelist-base.html
+++ b/polymer/components/nodelist-base/nodelist-base.html
@@ -81,9 +81,11 @@
 						// если есть и удален - удаляем из коллекции
 						this.nodes.splice(existingItemIndex, 1)
 					} else {
-						// иначе - обновляем существующий элемент
-						// todo - возможно нужно обновлять мягко, с проверками на идентичность
-						this.nodes[existingItemIndex] = data;
+						// иначе - мягко обновляем существующий элемент (иначе пересоздается нода, обнуляя все свои свойства)
+						// впрочем, теги и другие вложенные объекты сейчас пересоздаются, так что возможно (todo) создать функцию рекурсивного мягкого обновления
+						for (var key in data) {
+							this.nodes[existingItemIndex][key] = data[key];
+						}
 					}
 				}
 			},
