--- a/polymer/components/nodelist-posts/nodelist-posts.html
+++ b/polymer/components/nodelist-posts/nodelist-posts.html
@@ -60,7 +60,7 @@
 
 				this.loading = true;
 
-				this.selectedTopic = details.id;
+				this.selectedTopic = details.topic.id;
 			},
 
 			addMessage: function(event, message){
