--- a/polymer/components/nodelist-topics/nodelist-topics.html
+++ b/polymer/components/nodelist-topics/nodelist-topics.html
@@ -108,7 +108,8 @@
 
 					// todo - нужно либо отключить соблюдение сортировки в processItem, либо сделать условие на выполнение sortSelf
 					// (было обновление) иначе - двойная работа. А еще лучше - сначала, если есть обновления, А ТАКЖЕ если от
-					// обновлений может зависеть порядок - обновить и отсортировать, а затем добавить/удалить с само-сортировкой
+					// обновлений может зависеть порядок - обновить и отсортировать, а затем добавить/удалить с само-сортировкой.
+					// Чтобы понять, нужна ли сортировка - можно проверять, изменилось ли поле, по которому сортируем ;)
 					this.sortSelf();
 				}
 			}
