--- a/polymer/components/nodelist-base/nodelist-base.html
+++ b/polymer/components/nodelist-base/nodelist-base.html
@@ -1,4 +1,4 @@
-<polymer-element name="nodelist-base" attributes="nodes" flex>
+<polymer-element name="nodelist-base" attributes="nodes">
 	<template>
 
 		<style>
