--- a/skins/clarity/styles/design.desktop.less
+++ b/skins/clarity/styles/design.desktop.less
@@ -1155,7 +1155,7 @@ blockquote {
 			bottom:4px;
 
 			img {
-				height:40px
+				height:50px
 			}
 		}
 
@@ -1181,6 +1181,7 @@ blockquote {
 	background-color: #fff;
 	margin:1px 0 0 1px;
 	position:relative;
+	padding: 2px 0 2px;
 
 	input {
 		border:0;
